2013-12-06  Alexander V. Lukyanov <lavv17f@gmail.com>

	* xheap.h: min-heap implementation with random remove.
	* Timer.cc, Timer.h, Makefile.am: use xheap and xlist for Timer.

2013-12-05  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc, Http.h: fixed ARRAY_INFO for the case of PROPFIND;
	  use symbolic error codes.

2013-12-04  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Torrent.cc: use Delete method for peers.
	* MirrorJob.cc, MirrorJob.h: use SMTaskRef for ListInfo.
	* Speedometer.cc, Speedometer.h: don't inherit SMTask.
	* FileCopy.cc, FileCopy.h: don't use SMTaskRef for Speedometer.
	* SMTask.h: don't inherit SMTaskRef from Ref, make SMTask dtor
	  protected.
	* buffer.h: use plain Ref for Speedometer; make IOBuffer dtor protected.
	* FileAccess.h, ProcWait.h: make SMTask heirs dtors protected.

2013-12-03  Alexander V. Lukyanov <lavv17f@gmail.com>

	* buffer.cc, buffer.h: (TuneGetSize) new method.
	* ProtoLog.cc: check Log::global for NULL.
	* FileCopy.cc, FileCopy.h: use TuneGetSize, fixed `verify' type.
	* FindJobDu.h, Fish.h, Http.h, HttpDir.h, PtyShell.h, SFtp.h:
	  use SMTaskRef for tasks.
	* SMTask.cc, SMTask.h: use new xlist; add `deleted' list; add `new' list.

2013-12-02  Alexander V. Lukyanov <lavv17f@gmail.com>

	* SMTask.cc: (CollectGarbage) fixed deleting list manipulation.

2013-11-29  Alexander V. Lukyanov <lavv17f@gmail.com>

	* GetPass.cc, complete.cc: don't call SMTask dtor directly.
	* SMTask.cc, SMTask.h: add deleting list; use static array for stack.
	* xarray.cc, xarray.h: optimize space allocation by inlining some code.
	* SMTask.cc: don't spin on collected garbage.
	* DirColors.h: no need to inherit SMTask, use ResClient.
	* SMTask.h: make deleting, running and ref_count private;
	  (Deleted) new method.
	* IdNameCache.cc, Job.cc, ProcWait.cc, Resolver.cc, Torrent.cc:
	  use public methods of SMTask, don't use `deleting' member directly.


2013-11-27  Alexander V. Lukyanov <lavv17f@gmail.com>
