@@ -1,3 +1,8 @@
+2013-12-09  Alexander V. Lukyanov <lavv17f@gmail.com>
+
+	* FileCopy.cc, FileCopy.h: add a delay when Read returns too small
+	  portions of data, it should decrease the number of syscalls.
+
 2013-12-06  Alexander V. Lukyanov <lavv17f@gmail.com>
 
 	* xheap.h: min-heap implementation with random remove.
